# rdp-statistic-windows-server

./: .env.example  .gitignore  README.md  docker-compose.yml  fetch_rdp_sessions.py  pyproject.toml
docker/: .dockerignore  Dockerfile
src/: check_available_dates.py  env.example  main.py  pyproject.toml
src/app/: main.py
src/app/api/v1/: rdp.py
src/app/models/: rdp.py
src/app/services/: rdp_service.py
src/app/utils/: logger.py
